# device-base

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  actuators  app  partitions.csv  sdkconfig  sensors
core/: CMakeLists.txt  SenseBuffer.cpp  SenseBuffer.h  SensorInfo.cpp  SensorInfo.h  Sensors.cpp  api_client.c  api_client.h  command.cpp  command.h  command_wifi.cpp  command_wifi.h  httpc.c  httpc.h  misc.c  misc.h  nvs.c  nvs.h  ota.c  ota.h  schedule.cpp  schedule.h  schedule_funcs.c  schedule_funcs.h  sensor.cpp  sensor.h  setup_mode.cpp  setup_mode.h  sntp.c  sntp.h  testcode.cpp  testcode.h  utility.cpp  utility.h  v_watch.cpp  v_watch.h  wifi.h
documents/: device.swagger.yaml
drivers/: CMakeLists.txt  I2C.cpp  I2C.h  SPI.cpp  SPI.h  UART2.cpp  UART2.h  bt.c  bt.h  neopixel.c  neopixel.h  wifi.c
includes/: config.default.h  config.h  debug.h  device.h  globals.h  hardware.h  types.h
libs/actuators/: fan.h
libs/sensors/: BME280.cpp  BME280.h  BME280_Barometric.cpp  BME280_Barometric.h  BME280_Humidity.cpp  BME280_Humidity.h  BME280_Temp.cpp  MLX90614.cpp  MLX90614.h  MLX90614_LED.cpp  MLX90614_LED.h  MLX90614_Object.cpp
main/: CMakeLists.txt  component.mk  main.cpp  version.h
scripts/: esp32  openocd.cfg
